# treeline

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
cli/: pyproject.toml
cli/src/treeline/: config.py
cli/src/treeline/app/: doctor_service.py  import_service.py
cli/src/treeline/commands/: import_cmd.py
cli/src/treeline/infra/: demo.py
cli/tests/smoke/: test_demo_mode_cli.py  test_doctor.py  test_encrypt.py  test_parity.py
plugin-sdk/: package.json
plugin-sdk/src/: index.ts
plugin-template/: AGENTS.md  README.md  manifest.json  package-lock.json  package.json
plugin-template/src/: HelloWorldView.svelte  index.ts
rust-core/: .gitignore  Cargo.toml
rust-core/treeline-cli/: Cargo.toml
rust-core/treeline-cli/src/: main.rs  output.rs
rust-core/treeline-cli/src/commands/: backfill.rs  backup.rs  compact.rs  demo.rs  doctor.rs  encrypt.rs  import.rs  logs.rs  mod.rs  new.rs  plugin.rs  query.rs  remove.rs  setup.rs  status.rs  sync.rs  tag.rs
rust-core/treeline-core/: Cargo.toml
rust-core/treeline-core/src/: config.rs  lib.rs
rust-core/treeline-core/src/adapters/: demo.rs  duckdb.rs  lunchflow.rs  lunchflow_mock.rs  mod.rs  simplefin.rs
rust-core/treeline-core/src/domain/: account.rs  backup.rs  balance.rs  encryption.rs  mod.rs  result.rs  rule.rs  transaction.rs  user.rs
rust-core/treeline-core/src/log_migrations/: 000_migrations.sql  001_initial_schema.sql  mod.rs
rust-core/treeline-core/src/migrations/: 011_account_classification.sql  012_provider_specific_columns.sql  013_refresh_accounts_view.sql  014_track_auto_applied_tags.sql  mod.rs
rust-core/treeline-core/src/ports/: data_provider.rs  mod.rs  repository.rs
rust-core/treeline-core/src/services/: backup.rs  balance.rs  compact.rs  demo.rs  doctor.rs  encryption.rs  import.rs  logging.rs  migration.rs  mod.rs  plugin.rs  query.rs  status.rs  sync.rs  tag.rs
rust-core/treeline-core/tests/: concurrent_access_test.rs  connection_retry_test.rs  integration_tests.rs
scripts/: release.sh
