[workspace]
resolver = "2"
members = ["treeline-core", "treeline-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/treeline-money/treeline"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (1.4+ required for encryption support)
# Note: ICU extension not available as Cargo feature (crates.io size limit)
# All date functions use Rust-computed dates to avoid ICU dependency
duckdb = { version = "1.4", features = ["bundled", "json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

# Crypto
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"

# HTTP (for SimpleFIN)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Regex (for fingerprint normalization)
regex = "1.0"

# SQL parsing (for syntax validation)
sqlparser = "0.41"

# CSV parsing
csv = "1.3"

# Zip archives
zip = "2.2"

# CLI libraries
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
atty = "0.2"

# Directories
dirs = "5.0"

# Internal crates
treeline-core = { path = "treeline-core" }
